Input variable usage updates - 'pool_ksize' and 'pool_strides'

--- a/dlnd_image_classification.ipynb
+++ b/dlnd_image_classification.ipynb
@@ -388,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Convolution and Maxpool output size Tensor(\"MaxPool:0\", shape=(?, 4, 4, 10), dtype=float32)\n",
+      "Convolution and Maxpool output size Tensor(\"MaxPool_8:0\", shape=(?, 4, 4, 10), dtype=float32)\n",
       "Tests Passed\n"
      ]
     }
@@ -427,8 +427,8 @@
     "    #applying max pooling\n",
     "    maxpooloutput = tf.nn.max_pool(\n",
     "    convoutput,\n",
-    "    ksize=[1,2,2,1],\n",
-    "    strides=[1,2,2,1],\n",
+    "    ksize=[1, pool_ksize[0], pool_ksize[1],1],\n",
+    "    strides=[1, pool_strides[0], pool_strides[1],1],\n",
     "    padding = 'SAME')\n",
     "    \n",
     "    print (\"Convolution and Maxpool output size\", maxpooloutput)\n",
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -678,13 +678,13 @@
     "    \n",
     "    # : Applied an Output Layer\n",
     "    #   Set this to the number of classes\n",
-    "    #   Function Definition from Above:\n",
+    "    # Function Definition from Above:\n",
     "    #   output(x_tensor, num_outputs)\n",
     "    num_outputs = 10\n",
     "    output_layer = output(fullyconnected_layer,num_outputs)\n",
     "    \n",
     "    \n",
-    "    # return output\n",
+    "    # TODO: return output\n",
     "    return output_layer\n",
     "\n",
     "\n",
